Improve content heading

--- a/docs/Labs-Instructions/01.Collaborate/01.project-management.md
+++ b/docs/Labs-Instructions/01.Collaborate/01.project-management.md
@@ -1,4 +1,4 @@
-# 🧪 Project Management
+# :test_tube: Project Management
 
 !!! quote ":moneybag: Collaboratively track business goals to align with organization strategy"
 
