--- a/docs/Labs-Instructions/01.Collaborate/03.validate-work.md
+++ b/docs/Labs-Instructions/01.Collaborate/03.validate-work.md
@@ -1,4 +1,4 @@
-# 🧪 Validate Work Done
+# :test_tube: Validate Work Done
 
 Now that you have the lab code, you can start working on your application! This
 document will walk you through the initial setup steps so that you can start
