--- a/docs/Labs-Instructions/02.Secure-Software-Supply-Chain/00.md
+++ b/docs/Labs-Instructions/02.Secure-Software-Supply-Chain/00.md
@@ -1,4 +1,4 @@
-# Secuirty Checks
+# :test_tube: Secuirty Checks
 
 In this part we will add to the continuous integration workflow the security checks.
 
