--- a/docs/Labs-Instructions/02.Secure-Software-Supply-Chain/01.md
+++ b/docs/Labs-Instructions/02.Secure-Software-Supply-Chain/01.md
@@ -1,4 +1,4 @@
-# Continues Deployment
+# :test_tube: Continues Deployment
 
 In this part we will get our application ready for deployment and deploy it to GitHub Pages.
 
