--- a/docs/Labs-Instructions/02.Secure-Software-Supply-Chain/02.md
+++ b/docs/Labs-Instructions/02.Secure-Software-Supply-Chain/02.md
@@ -1,4 +1,4 @@
-# Build and Upload Application Artifact
+# :test_tube: Build and Upload Application Artifact
 
 In this step we will build the application and upload the artifact to GitHub Packages once the pre-relase tag is created on step [Create Tag Step](../01.md).
 
