--- a/docs/Labs-Instructions/02.Secure-Software-Supply-Chain/03.md
+++ b/docs/Labs-Instructions/02.Secure-Software-Supply-Chain/03.md
@@ -1,4 +1,4 @@
-# Deploye the application to GitHub Pages
+# :test_tube: Deploye the application to GitHub Pages
 
 In this step once we clarify the application is ready to be deployed to pre-relase we will create a new release deployment.
 
