--- a/docs/Labs-Instructions/02.Secure-Software-Supply-Chain/04.md
+++ b/docs/Labs-Instructions/02.Secure-Software-Supply-Chain/04.md
@@ -1,4 +1,4 @@
-# Deploy Release
+# :test_tube: Deploy Release
 
 In this step will merge our pull request to run the workflows we have created on the previous steps.
 
