--- a/docs/Labs-Instructions/02.Secure-Software-Supply-Chain/02.md
+++ b/docs/Labs-Instructions/02.Secure-Software-Supply-Chain/02.md
@@ -6,8 +6,8 @@ In this step we will build the application and upload the artifact to GitHub Pac
 - _**Estimated completion time:**_ 5 minutes
 - _**Outcome:**_ The application will be built and uploaded to GitHub Packages.
 
-> [!NOTE]
-> We will continue working on the same branch `contiuous-integration-deployment`.
+!!! note
+    We will continue working on the same branch `contiuous-integration-deployment`.
 
 ## Prerequisites
 
@@ -21,8 +21,8 @@ In this step we will build the application and upload the artifact to GitHub Pac
 
 ## :pencil: Lab
 
-> [!IMPORTANT]
-> This step requires the previous step [Create Tag Step](../01.md) to be completed first and the pre-realse tag is created and merging the pull request to main branch on step [Merge Pull Request Step](../04.md).
+!!! note
+    This step requires the previous step [Create Tag Step](../01.md) to be completed first and the pre-realse tag is created and merging the pull request to main branch on step [Merge Pull Request Step](../04.md).
 
 1. Navigate to `.github/workflows` and open the file `02.2.continuous.delivery.yml`.
 2. Add the following content to the file:
