--- a/docs/Labs-Instructions/03.Automate-Release/01.md
+++ b/docs/Labs-Instructions/03.Automate-Release/01.md
@@ -6,8 +6,8 @@ In this step once we clarify the application is ready to be deployed to pre-rela
 - _**Estimated completion time:**_ 5 minutes
 - _**Outcome:**_ A production release will be created.
 
-> [!NOTE]
-> We will continue working on the same branch `contiuous-integration-deployment`.
+!!! note
+    We will continue working on the same branch `contiuous-integration-deployment`.
 
 ## Prerequisites
 
@@ -20,8 +20,8 @@ In this step once we clarify the application is ready to be deployed to pre-rela
 
 ## :pencil: Lab
 
-> [!IMPORTANT]
-> This step requires the previous step [Create pre-release Step](../02.md) to be completed first and the pre-realse tag is created and merging the pull request to main branch on step [Merge Pull Request Step](../04.md).
+!!! note
+    This step requires the previous step [Create pre-release Step](../02.md) to be completed first and the pre-realse tag is created and merging the pull request to main branch on step [Merge Pull Request Step](../04.md).
 
 1. Navigate to `.github/workflows` and open the file `03.continuous.deployment.yml`.
 2. Add the following content to the file:
