--- a/docs/Labs-Instructions/01.Collaborate/01.md
+++ b/docs/Labs-Instructions/01.Collaborate/01.md
@@ -1,6 +1,6 @@
 # :test_tube: Project Management
 
-!!! quote ":moneybag: Collaboratively track business goals to align with organization strategy"
+!!! quote ":moneybag: Facilitate tracking of business goal delivery"
 
     > _Our goal is to create a **Tetris Game** to delight our site visitors._
 
