--- a/docs/Labs-Instructions/02.Secure-Software-Supply-Chain/02.md
+++ b/docs/Labs-Instructions/02.Secure-Software-Supply-Chain/02.md
@@ -1,6 +1,6 @@
 # :test_tube: Build and Upload Application Artifact
 
-In this step we will build the application and upload the artifact to GitHub Packages once the pre-relase tag is created on step [Create Tag Step](../01.md).
+In this step we will build the application and upload the artifact to GitHub Packages once the pre-relase tag is created on step [Create Tag Step](./01.md).
 
 - _**Objective:**_ Build the application and upload the artifact to GitHub Packages.
 - _**Estimated completion time:**_ 5 minutes
@@ -22,7 +22,7 @@ In this step we will build the application and upload the artifact to GitHub Pac
 ## :pencil: Lab
 
 !!! note
-    This step requires the previous step [Create Tag Step](../01.md) to be completed first and the pre-realse tag is created and merging the pull request to main branch on step [Merge Pull Request Step](../04.md).
+    This step requires the previous step [Create Tag Step](./01.md) to be completed first and the pre-realse tag is created and merging the pull request to main branch on step [Merge Pull Request Step](./04.md).
 
 1. Navigate to `.github/workflows` and open the file `02.2.continuous.delivery.yml`.
 2. Add the following content to the file:
