--- a/docs/Labs-Instructions/01.Collaborate/02.md
+++ b/docs/Labs-Instructions/01.Collaborate/02.md
@@ -1,5 +1,14 @@
 # :test_tube: Implement Features
 
-We want to implement a game of Tetris to excite our site visitors.
+!!! quote ":moneybag: Enable rapid onboarding to project development"
 
-## Step 1: Implement the game and integrate it into the site
+    > _Our goal is to create a **Tetris Game** to delight our site visitors._
+
+    1. Refer back to the Codespaces development environment created in the [prerequisite to the workshop](../../../#prerequisites).
+    2. On the `TERMINAL` view at the bottom, notice that a local site server is already running.
+    3. On the `PORTS` view at the bottom, notice there is a `Site (8080)` entry in the table. You may right click on the entry to make the port public.
+    4. Click the **:octicons-globe-16:** icon associated with `Site (8080)` entry to view the site in your browser
+    5. Find and open the file `mkdocs.yml` in the File Explorer (it's at the root of the file tree)
+    6. Uncomment the Tetris Game relevant entry
+
+        ![Alt text](image.png)
