--- a/docs/Labs-Instructions/01.Collaborate/03.md
+++ b/docs/Labs-Instructions/01.Collaborate/03.md
@@ -1,36 +1,123 @@
 # :test_tube: Validate Work Done
 
-Now that you have the lab code, you can start working on your application! This
-document will walk you through the initial setup steps so that you can start
-developing.
+# Step 1: Create Integration Checks and Tests
 
-## Step 1: Install Dependencies
+The first step is to create a new integration check for the our app.
 
-Before you can run the sample app locally (or in your Codespace), you will need
-to install some dependencies.
+- _**Objective**_: Implement integration checks using GitHub Actions to ensure code quality (linter), unit test, and UI tests.
+- _**Outcome**_: Gain familiarity with GitHub Actions and add integration checks.
 
-1. Run the following command to install the project requirements:
+## Instructions
 
-   ```bash
-   python3 -m pip install --requirement requirements.txt
-   ```
+### Add Code Quality Checks
 
-1. If you would like Codespaces to automatically do this for you next time you start working on the project you may add the following declaration into the root of the Codespaces configuration object:
+1. Create a new branch with name `contiuous-integration-deployment` using the following commands
+    - `git branch contiuous-integration-deployment`
+    - `git checkout contiuous-integration-deployment`
+2. Navigate to `.github/workflows` and create a new file with the name `01.continuous.integration.yml`.
+3. Copy and paste the provided YAML code for running quality checks, UI tests, and security checks.
 
-    ```json
-    {
-        ...
-        "postStartCommand": "python3 -m pip install --requirement requirements.txt"
-        ...
-    }
+   ```yaml
+      name: Run Checks
+
+      on:
+        pull_request:
+          branches:
+            - main
+        workflow_call: {}
+
+      permissions:
+        actions: write
+        contents: read
+        checks: write
+
+      jobs:
+        quality-checks:
+          runs-on: ubuntu-latest
+          steps:
+            - uses: actions/checkout@v3
+            - uses: actions/setup-python@v4
+              with:
+                python-version: 3.11
+            - uses: actions/setup-node@v3
+              with:
+                node-version: 20
+            - name: Install Python dependencies
+              run: |
+                python -m pip install --upgrade pip
+                pip install -r requirements.ci.txt
+            - name: Install NodeJS dependencies
+              run: npm ci
+            - name: Lint Python source
+              run: |
+                ruff check --format=github --select=E9,F63,F7,F82 --target-version=py311 .
+      ```
+
+4. Save the file and commit it to your repository using the following commands
+    - add the new files: `git add .`
+    - commit the changes: `git commit -m "add code quality checks"`
+    - push the changes to github: `git push --set-upstream origin contiuous-integration-deployment`
+5. Go back to your github repo and create a pull request
+
+    | - Create pull request |
+    | ---------------------- |
+    | ![pr-1](../../docs/media/lab-1-step-1-pr-1.png) |
+
+    | - Compare & pull request |
+    | -- |
+    | ![pr-2](../../docs/media/lab-1-step-1-pr-2.png) |
+
+### Add UI Tests
+
+1. Navigate to `.github/workflows` and open `01.continuous.integration.yml`.
+2. Add the required `env` for the UI tests using the following code on top of `job`.
+
+    ```yaml
+      env:
+        CI: 1
+        SITE_DIR: _site
+        TETRIS_APP_HOST: "127.0.0.1"
+        TETRIS_APP_PORT: "8080"
+        TETRIS_APP_PATH: "pages/githubuniverseworkshops/github-devsecops-fundamentals"
     ```
 
-1. Confirm that the site building tool is available by running the following command
+3. Add the UI tests step on the workflow using the following code.
 
-   ```bash
-   python3 -m mkdocs serve
-   ```
+    ```yaml
+      ui-tests:
+          runs-on: ubuntu-latest
+          steps:
+            - uses: actions/checkout@v3
+            - uses: actions/setup-python@v4
+              with:
+                python-version: 3.11
+            - uses: actions/setup-node@v3
+              with:
+                node-version: 20
+            - name: Install Python dependencies
+              run: |
+                python -m pip install --upgrade pip
+                pip install -r requirements.ci.txt
+            - name: Install node dependencies
+              run: npm ci
+            - name: Install Playwright Browsers
+              run: npx playwright install --with-deps
+            - name: Run Playwright tests
+              run: npx playwright test
+            - uses: actions/upload-artifact@v3
+              if: always()
+              with:
+                name: playwright-report
+                path: playwright-report/
+                retention-days: 30
+    ```
 
-## Next Steps
+4. Save the file and commit it to your repository using the following commands
+    - add the new files: `git add .`
+    - commit the changes: `git commit -m "add ui tests"`
+    - push the changes to github: `git push --set-upstream origin contiuous-integration-deployment`
+5. Navgiate back to our pull request and click on the `checks` tab to see the status of our checks.
 
-Now that you have rapidly onboarded yourself to the project, it time to [Implement Features](./implement-features.md)!
+    | - Checks |
+    | -- |
+    | ![checks](../../docs/media/lab-1-step-1-checks.png) |
