--- a/docs/Labs-Instructions/02.Secure-Software-Supply-Chain/01.md
+++ b/docs/Labs-Instructions/02.Secure-Software-Supply-Chain/01.md
@@ -6,13 +6,13 @@ In this part we will get our application ready for deployment and deploy it to G
 - _**Estimated completion time:**_ 5 minutes
 - _**Outcome:**_ A new pre-release version of the application is created when the main branch is updated.
 
-> [!NOTE]
-> This step will not be run until we merge the pull request first
+!!! note
+    This step will not be run until we merge the pull request first
 
 ## Prerequisites
 
-> [!NOTE]
-> The prerequisites are the same as in the previous part.
+!!! note
+    The prerequisites are the same as in the previous part.
 
 - [GitHub Codespaces](https://docs.github.com/en/codespaces)
 - [GitHub Actions](https://docs.github.com/en/actions)
@@ -27,8 +27,8 @@ In this part we will get our application ready for deployment and deploy it to G
 
 ### 1. Create a GitHub Action to build and publish the application
 
-> [!NOTE]
-> We will keep working on the same branch `contiuous-integration-deployment`.
+!!! note
+    We will keep working on the same branch `contiuous-integration-deployment`.
 
 #### Step 1: Get the last version number
 
