--- a/docs/Labs-Instructions/02.Secure-Software-Supply-Chain/00.md
+++ b/docs/Labs-Instructions/02.Secure-Software-Supply-Chain/00.md
@@ -17,7 +17,7 @@ In this part we will add to the continuous integration workflow the security che
 
 ## :pencil: Lab
 
-### 1. Enable Enable GHAS (GitHub Advanced Security) checks on GitHub Repository
+### Step 1. Enable Enable GHAS (GitHub Advanced Security) checks on GitHub Repository
 
 !!! note
 
@@ -47,7 +47,7 @@ In this part we will add to the continuous integration workflow the security che
 
      ![GHAS](../../assets/img/compliance-3.png)
 
-### 2. Add security checks to the continuous integration workflow
+### Step 2. Add security checks to the continuous integration workflow
 
 1. Navigate to `.github/workflows` and open the file `01.01.continuous.integration.yml`.
 2. Add the following content to the file on line `68`:
