--- a/docs/Labs-Instructions/01.Collaborate/03.md
+++ b/docs/Labs-Instructions/01.Collaborate/03.md
@@ -1,5 +1,25 @@
 # :test_tube: Validate Work Done
 
+## Local validation
+
+## Standard validation
+
+### Continuous Integration
+
+```{ .mermaid }
+sequenceDiagram
+    participant GA as GitHub Actions
+
+    activate GA
+    GA-->>GA: Compile
+    GA-->>GA: Build
+    GA-->>GA: Unit Test
+    GA-->>GA: Integration Test
+    GA-->>GA: Code Scanning (CodeQL, Trivy)
+    GA-->>GA: Dependency Review
+    deactivate GA
+```
+
 # Step 1: Create Integration Checks and Tests
 
 The first step is to create a new integration check for the our app.
