--- a/docs/Labs-Instructions/02.Secure-Software-Supply-Chain/01.md
+++ b/docs/Labs-Instructions/02.Secure-Software-Supply-Chain/01.md
@@ -9,6 +9,30 @@ In this part we will get our application ready for deployment and deploy it to G
 !!! note
     This step will not be run until we merge the pull request first
 
+```{ .mermaid }
+
+sequenceDiagram
+    participant GA as GitHub Actions
+
+    activate GA
+    GA-->>GA: Create a tag
+    GA-->>GA: Update version number
+    deactivate GA
+
+```
+
+```{ .mermaid }
+
+sequenceDiagram
+    participant GA as GitHub Actions
+
+    activate GA
+    GA-->>GA: Build artifacts
+    GA-->>GA: Store artifacts
+    deactivate GA
+
+```
+
 ## Prerequisites
 
 !!! note
@@ -35,95 +59,95 @@ In this part we will get our application ready for deployment and deploy it to G
 1. Navgiate to `.github/workflows` and create a new file called `02.1.continuous.delivery.yml`.
 2. Add the following content to the file:
 
-    ```yml
-    name: Version Changes to the Main Branch
+   ```yml
+   name: Version Changes to the Main Branch
 
-    on:
-    push:
-        branches:
-        - main
+   on:
+   push:
+       branches:
+       - main
 
-    jobs:
-    version-main-branch-changes:
-        runs-on: ubuntu-latest
-        steps:
-        - name: Checkout
-            uses: actions/checkout@v3
-            with:
-            fetch-depth: 0
-        - name: Get last version number
-            id: get_last_version
-            run: |
-            # Retrieve the last git tag, as we will only be processing one delivery line.
-            last_version=$(git describe --tags --abbrev=0 2>/dev/null || echo "0.0.0")
-            echo "Last version is $last_version"
-            echo "last_version=$last_version" >> "$GITHUB_OUTPUT"
-    ```
+   jobs:
+   version-main-branch-changes:
+       runs-on: ubuntu-latest
+       steps:
+       - name: Checkout
+           uses: actions/checkout@v3
+           with:
+           fetch-depth: 0
+       - name: Get last version number
+           id: get_last_version
+           run: |
+           # Retrieve the last git tag, as we will only be processing one delivery line.
+           last_version=$(git describe --tags --abbrev=0 2>/dev/null || echo "0.0.0")
+           echo "Last version is $last_version"
+           echo "last_version=$last_version" >> "$GITHUB_OUTPUT"
+   ```
 
 3. Save the file and commit and push the changes to the `contiuous-integration-deployment` branch.
 
-    ```bash
-        git add .
-        git commit -m "feat: add continuous delivery workflow"`
-        git push origin continuous-integration-deployment`
-    ``````
+   ```bash
+       git add .
+       git commit -m "feat: add continuous delivery workflow"`
+       git push origin continuous-integration-deployment`
+   ```
 
 #### Step 2: Get next version number
 
 1. Navgiate to `.github/workflows` and open `02.1.continuous.delivery.yml`.
 2. On line `24` add the following content:
 
-    ```yml
-    - name: Get next version number
-        id: get_next_version
-        run: |
-        # Retrieve the last git tag, as we will only be processing one delivery line.
-        last_version=$(git describe --tags --abbrev=0 2>/dev/null || echo "0.0.0")
-        echo "Last version is $last_version"
-        # Split the version into its components
-        a=( ${last_version//./ } )
-        # If the last component is 9, then increment the middle component and reset the last component to 0
-        if [[ ${a[2]} == 9 ]]; then
-            next_version="${a[0]}.$((${a[1]}+1)).0"
-        else
-            # Otherwise increment the last component
-            next_version="${a[0]}.${a[1]}.$((${a[2]}+1))"
-        fi
-        echo "Next version is $next_version"
-        echo "next_version=$next_version" >> "$GITHUB_OUTPUT"
-    ```
+   ```yml
+   - name: Get next version number
+       id: get_next_version
+       run: |
+       # Retrieve the last git tag, as we will only be processing one delivery line.
+       last_version=$(git describe --tags --abbrev=0 2>/dev/null || echo "0.0.0")
+       echo "Last version is $last_version"
+       # Split the version into its components
+       a=( ${last_version//./ } )
+       # If the last component is 9, then increment the middle component and reset the last component to 0
+       if [[ ${a[2]} == 9 ]]; then
+           next_version="${a[0]}.$((${a[1]}+1)).0"
+       else
+           # Otherwise increment the last component
+           next_version="${a[0]}.${a[1]}.$((${a[2]}+1))"
+       fi
+       echo "Next version is $next_version"
+       echo "next_version=$next_version" >> "$GITHUB_OUTPUT"
+   ```
 
 3. Save the file and commit and push the changes to the `contiuous-integration-deployment` branch.
 
-    ```bash
-        git add .
-        git commit -m "feat: update continuous delivery workflow - add next version number step"`
-        git push origin continuous-integration-deployment`
-    ``````
+   ```bash
+       git add .
+       git commit -m "feat: update continuous delivery workflow - add next version number step"`
+       git push origin continuous-integration-deployment`
+   ```
 
 #### Step 3: Create tag for the next version for pre-release
 
 1. Navgiate to `.github/workflows` and open `02.1.continuous.delivery.yml`.
 2. Add the following content to the file after line `38`:
 
-    ```yml
-    - name: Create tag for the next version
-        run: |
-          git config --global user.name "${GITHUB_ACTOR}"
-          git config --global user.email "${GITHUB_ACTOR}@users.noreply.github.com"
-          git tag -a "$next_version" -m "Version $next_version"
-          git push origin "$next_version"
-        env:
-          next_version: ${{ steps.get_next_version.outputs.next_version }}-pre-release
-    ```
+   ```yml
+   - name: Create tag for the next version
+       run: |
+         git config --global user.name "${GITHUB_ACTOR}"
+         git config --global user.email "${GITHUB_ACTOR}@users.noreply.github.com"
+         git tag -a "$next_version" -m "Version $next_version"
+         git push origin "$next_version"
+       env:
+         next_version: ${{ steps.get_next_version.outputs.next_version }}-pre-release
+   ```
 
 3. Save the file and commit and push the changes to the `contiuous-integration-deployment` branch.
 
-    ```bash
-        git add .
-        git commit -m "feat: update continuous delivery workflow - add create tag step"`
-        git push origin continuous-integration-deployment`
-    ```
+   ```bash
+       git add .
+       git commit -m "feat: update continuous delivery workflow - add create tag step"`
+       git push origin continuous-integration-deployment`
+   ```
 
 ---
 
