--- a/docs/Labs-Instructions/02.Secure-Software-Supply-Chain/02.md
+++ b/docs/Labs-Instructions/02.Secure-Software-Supply-Chain/02.md
@@ -58,7 +58,7 @@ In this step we will build the application and upload the artifact to GitHub Pac
                 enablement: "true"
             - name: Build Site
                 run: |
-                mkdocs build --clean --strict --verbose --site-dir '${{ env.SITE_DIR }}'
+                python mkdocs build --clean --strict --verbose --site-dir '${{ env.SITE_DIR }}'
             - name: Create Pre-Release
                 uses: softprops/action-gh-release@v1
                 with:
