--- a/docs/Labs-Instructions/01.Collaborate/03.md
+++ b/docs/Labs-Instructions/01.Collaborate/03.md
@@ -58,7 +58,7 @@ The first step is to create a new integration check for the our app.
             - uses: actions/checkout@v3
             - uses: actions/setup-python@v4
               with:
-                python-version: 3.11
+                python-version: 3.12
             - uses: actions/setup-node@v3
               with:
                 node-version: 20
@@ -94,7 +94,7 @@ The first step is to create a new integration check for the our app.
 
     ```yaml
       env:
-        CI: 1
+        CI: true
         SITE_DIR: _site
         TETRIS_APP_HOST: "127.0.0.1"
         TETRIS_APP_PORT: "8080"
@@ -110,7 +110,7 @@ The first step is to create a new integration check for the our app.
             - uses: actions/checkout@v3
             - uses: actions/setup-python@v4
               with:
-                python-version: 3.11
+                python-version: 3.12
             - uses: actions/setup-node@v3
               with:
                 node-version: 20
