--- a/docs/Labs-Instructions/03.Automate-Release/01.md
+++ b/docs/Labs-Instructions/03.Automate-Release/01.md
@@ -46,7 +46,7 @@ In this step once we clarify the application is ready to be deployed to pre-rela
     deployments: write
     
     env:
-    CI: 1
+    CI: true
     
     jobs:
     deploy:
