--- a/docs/Labs-Instructions/02.Secure-Software-Supply-Chain/00.md
+++ b/docs/Labs-Instructions/02.Secure-Software-Supply-Chain/00.md
@@ -1,9 +1,9 @@
-# :test_tube: Secuirty Checks
+# :test_tube: Security Checks
 
 In this part we will add to the continuous integration workflow the security checks.
 
 - _**Objective:**_ Add security checks to the continuous integration workflow.
-- _**Estimated completion time:**_ 5 minutes
+- _**Estimated completion time:**_ 10 minutes
 - _**Outcome:**_ The continuous integration workflow will run the security checks on the Pull Request
 
 !!! note
@@ -30,20 +30,20 @@ In this part we will add to the continuous integration workflow the security che
 
 3. Enable `Dependabot`
 
-   - Click on the button `EnableDependabot alerts`.
-   - Click on the button `Enable Dependabot security updates`.
+   - Click on the button <span style="background-color: green; font-weight: bold; padding: 0.25em 0.75em; border-radius: 0.5em">Enable</span> `Dependabot alerts`.
+   - Click on the button <span style="background-color: green; font-weight: bold; padding: 0.25em 0.75em; border-radius: 0.5em">Enable</span> `Dependabot security updates`.
 
        ![GHAS](../../assets/img/compliance-2.png)
 
 4. Enable `Code scanning`.
 
-   - Click on the button `Set up` for `CodeQL analysis` and select `default`.
+   - Click on the button <span style="background-color: green; font-weight: bold; padding: 0.25em 0.75em; border-radius: 0.5em">Set up</span> for `CodeQL analysis` and select <span style="background-color: green; font-weight: bold; padding: 0.25em 0.75em; border-radius: 0.5em">Default</span>.
 
       ![GHAS](../../assets/img/complianc-3_.png)
 
 5. Enable `Secret scanning`.
 
-   - Click on the button `Enable` for `Secret scanning`.
+   - Click on the button <span style="background-color: green; font-weight: bold; padding: 0.25em 0.75em; border-radius: 0.5em">Enable</span> for `Secret scanning`.
 
      ![GHAS](../../assets/img/complaince-4.png)
 
@@ -53,42 +53,42 @@ In this part we will add to the continuous integration workflow the security che
 2. Add the following content to the file on line `68`:
 
    ```yml
-       security-checks:
-       runs-on: ubuntu-latest
-       steps:
-       - uses: actions/checkout@v3
-       - uses: actions/setup-python@v4
-           with:
-           python-version: 3.12
-       - uses: actions/setup-node@v3
-           with:
-           node-version: 20
-       - name: Install Python dependencies
-           run: |
-           python -m pip install --upgrade pip
-           pip install -r requirements.txt
-       - name: Install node dependencies
-           run: npm ci
-       - name: Dependency Review
-           uses: actions/dependency-review-action@v3
-           with:
-           config-file: >-
-               ./.github/dependency-review-config.yml
-       - name: Initialize CodeQL
-           uses: github/codeql-action/init@v2
-           with:
-           languages: python,javascript
-           setup-python-dependencies: "false"
-       - name: Perform CodeQL Analysis
-           uses: github/codeql-action/analyze@v2
+   security-checks:
+   runs-on: ubuntu-latest
+   steps:
+   - uses: actions/checkout@v3
+   - uses: actions/setup-python@v4
+       with:
+       python-version: 3.12
+   - uses: actions/setup-node@v3
+       with:
+       node-version: 20
+   - name: Install Python dependencies
+       run: |
+       python -m pip install --upgrade pip
+       pip install -r requirements.txt
+   - name: Install node dependencies
+       run: npm ci
+   - name: Dependency Review
+       uses: actions/dependency-review-action@v3
+       with:
+       config-file: >-
+           ./.github/dependency-review-config.yml
+   - name: Initialize CodeQL
+       uses: github/codeql-action/init@v2
+       with:
+       languages: python,javascript
+       setup-python-dependencies: "false"
+   - name: Perform CodeQL Analysis
+       uses: github/codeql-action/analyze@v2
    ```
 
 3. Save the file and commit and push the changes to the `contiuous-integration-deployment` branch.
 
    ```bash
-       git add .
-       git commit -m "feat: update continuous integration workflow - add security checks step"`
-       git push origin continuous-integration-deployment`
+   git add .
+   git commit -m "feat: update continuous integration workflow - add security checks step"`
+   git push origin continuous-integration-deployment`
    ```
 
 4. Nagivate to the repository on GitHub and open the pull request.
