--- a/docs/Labs-Instructions/02.Secure-Software-Supply-Chain/00.md
+++ b/docs/Labs-Instructions/02.Secure-Software-Supply-Chain/00.md
@@ -51,8 +51,7 @@ In this part we will add to the continuous integration workflow the security che
 
 1. Navigate to `.github/workflows` and open the file `01.1.continuous.integration.yml`.
 2. Add the following content to the file on line `68`:
-
-       ```yml
+       ``` yaml
            security-checks:
            runs-on: ubuntu-latest
            steps:
@@ -82,13 +81,10 @@ In this part we will add to the continuous integration workflow the security che
            - name: Perform CodeQL Analysis
                uses: github/codeql-action/analyze@v2
        ```
-
 3. Save the file and commit and push the changes to the `contiuous-integration-deployment` branch.
-
-       ```bash
-           git add .
-           git commit -m "feat: update continuous integration workflow - add security checks step"`
-           git push origin continuous-integration-deployment`
+       ``` bash
+       git add .
+       git commit -m "feat: update continuous integration workflow - add security checks step"`
+       git push origin continuous-integration-deployment`
        ```
-
 4. Nagivate to the repository on GitHub and open the pull request.
