--- a/docs/Labs-Instructions/02.Secure-Software-Supply-Chain/00.md
+++ b/docs/Labs-Instructions/02.Secure-Software-Supply-Chain/00.md
@@ -14,6 +14,8 @@ In this part we will add to the continuous integration workflow the security che
 
 - [GitHub Actions](https://docs.github.com/en/actions)
 - [GitHub Actions - Workflow syntax for GitHub Actions](https://docs.github.com/en/actions/reference/workflow-syntax-for-github-actions)
+- [CodeQL](https://docs.github.com/en/code-security/code-scanning/enabling-code-scanning/configuring-default-setup-for-code-scanning)
+- 
 
 ## :pencil: Lab
 
@@ -51,43 +53,41 @@ In this part we will add to the continuous integration workflow the security che
 
 1. Navigate to `.github/workflows` and open the file `01.1.continuous.integration.yml`.
 2. Add the following content to the file on line `68`:
-   
-       ``` yaml
-       
-       security-checks:
-          runs-on: ubuntu-latest
-          steps:
-          - uses: actions/checkout@v3
-          - uses: actions/setup-python@v4
-            with:
-              python-version: 3.11
-          - uses: actions/setup-node@v3
-            with:
-              node-version: 20
-          - name: Install Python dependencies
-            run: |
-              python -m pip install --upgrade pip
-              pip install -r requirements.txt
-          - name: Install node dependencies
-            run: npm ci
-          - name: Dependency Review
-            uses: actions/dependency-review-action@v3
-            with:
-              config-file: ./.github/dependency-review-config.yml
-          - name: Initialize CodeQL
-            uses: github/codeql-action/init@v2
-            with:
-              languages: python,javascript
-              setup-python-dependencies: "false"
-          - name: Perform CodeQL Analysis
-            uses: github/codeql-action/analyze@v2```
+  
+   ``` yaml
+      security-checks:
+        runs-on: ubuntu-latest
+        steps:
+        - uses: actions/checkout@v3
+        - uses: actions/setup-python@v4
+          with:
+            python-version: 3.11
+        - uses: actions/setup-node@v3
+          with:
+            node-version: 20
+        - name: Install Python dependencies
+          run: |
+            python -m pip install --upgrade pip
+            pip install -r requirements.txt
+        - name: Install node dependencies
+          run: npm ci
+        - name: Dependency Review
+          uses: actions/dependency-review-action@v3
+          with:
+            config-file: ./.github/dependency-review-config.yml
+        - name: Initialize CodeQL
+          uses: github/codeql-action/init@v2
+          with:
+            languages: javascript
+        - name: Perform CodeQL Analysis
+          uses: github/codeql-action/analyze@v2
+   ```
 
-4. Save the file and commit and push the changes to the `contiuous-integration-deployment` branch.
-
-       ``` bash
+3. Save the file and commit and push the changes to the `contiuous-integration-deployment` branch.
+   ``` bash
        git add .
        git commit -m "feat: update continuous integration workflow - add security checks step"`
        git push origin continuous-integration-deployment`
-       ```
+   ```
 
-5. Nagivate to the repository on GitHub and open the pull request.
+4. Nagivate to the repository on GitHub and open the pull request.
