--- a/docs/Labs-Instructions/03.Automate-Release/02.md
+++ b/docs/Labs-Instructions/03.Automate-Release/02.md
@@ -1,5 +1,52 @@
 # :test_tube: Deploy Release
 
+## Recap
+
+```mermaid
+flowchart TD
+    subgraph Checks
+        A[Code Linting]
+        B[UI Testing]
+        D[Security Scanning]
+        C[Workflow Failure]
+    end
+
+    A-->|Pass|B
+    A-->|Fail|C
+    B-->|Pass|D
+    B-->|Fail|C
+
+    subgraph Release Process
+        E[Create Pre-Release Tag]
+        F[Create Pre-Release]
+        G{Validate}
+        H[Create Release]
+        I[Deployment]
+        J[Failure Workflow]
+        
+    end
+
+    D-->|Pass|K
+    D-->|Fail|C
+    E-->|Success|F
+    F-->|Success|G
+    F-->|Fali|J
+    G-->|Valid|H
+    G-->|Invalid|J
+    H-->|Pass|I
+    H-->|Fail|J
+    E-->|Fail|J
+
+    subgraph Main Branch
+        K[Push to Main Branch]
+    end
+
+    K-->|Success|E
+
+```
+
+## Instructions
+
 In this step will merge our pull request to run the workflows we have created on the previous steps.
 
 1. Navgiate to the repository on GitHub and open the pull request.
