Implement continuous deployment

--- a/docs/Labs-Instructions/01.Collaborate/.03.md
+++ b/docs/Labs-Instructions/01.Collaborate/.03.md
@@ -95,7 +95,7 @@ The first step is to create a new integration check for the our app.
     ```yaml
       env:
         CI: true
-        SITE_DIR: _site
+        SITE_DIR: site
         TETRIS_APP_HOST: "127.0.0.1"
         TETRIS_APP_PORT: "8080"
         TETRIS_APP_PATH: "pages/githubuniverseworkshops/github-devsecops-fundamentals"
