--- a/docs/Labs-Instructions/02.Secure-Software-Supply-Chain/00.md
+++ b/docs/Labs-Instructions/02.Secure-Software-Supply-Chain/00.md
@@ -8,14 +8,12 @@ In this part we will add to the continuous integration workflow the security che
 
 !!! note
 
-    We will continue working on the same branch `contiuous-integration-deployment` and the same file `01.1.continuous.integration.yml`.
+    We will continue working on the same branch `contiuous-integration-deployment` and the same file `01.01.continuous.integration.yml`.
 
 ## :books: Resources
 
 - [GitHub Actions](https://docs.github.com/en/actions)
 - [GitHub Actions - Workflow syntax for GitHub Actions](https://docs.github.com/en/actions/reference/workflow-syntax-for-github-actions)
-- [CodeQL](https://docs.github.com/en/code-security/code-scanning/enabling-code-scanning/configuring-default-setup-for-code-scanning)
-- 
 
 ## :pencil: Lab
 
@@ -53,15 +51,15 @@ In this part we will add to the continuous integration workflow the security che
 
 1. Navigate to `.github/workflows` and open the file `01.1.continuous.integration.yml`.
 2. Add the following content to the file on line `68`:
-  
-   ``` yaml
-      security-checks:
+!!! example "Security Checks"
+      ``` yaml
+        security-checks:
         runs-on: ubuntu-latest
         steps:
         - uses: actions/checkout@v3
         - uses: actions/setup-python@v4
           with:
-            python-version: 3.11
+            python-version: 3.12
         - uses: actions/setup-node@v3
           with:
             node-version: 20
@@ -78,16 +76,16 @@ In this part we will add to the continuous integration workflow the security che
         - name: Initialize CodeQL
           uses: github/codeql-action/init@v2
           with:
-            languages: javascript
+            languages: python,javascript
+            setup-python-dependencies: "false"
         - name: Perform CodeQL Analysis
           uses: github/codeql-action/analyze@v2
-   ```
-
-3. Save the file and commit and push the changes to the `contiuous-integration-deployment` branch.
-   ``` bash
+      ```
+!!! example "Push changes to Github"
+       ``` bash
        git add .
-       git commit -m "feat: update continuous integration workflow - add security checks step"`
-       git push origin continuous-integration-deployment`
-   ```
+       git commit -m "feat: update continuous integration workflow - add security checks step"
+       git push origin continuous-integration-deployment
+       ```
 
-4. Nagivate to the repository on GitHub and open the pull request.
+Nagivate to the repository on GitHub and open the pull request.
