--- a/docs/Labs-Instructions/02.Secure-Software-Supply-Chain/02.md
+++ b/docs/Labs-Instructions/02.Secure-Software-Supply-Chain/02.md
@@ -26,55 +26,46 @@ This step requires the previous step [Create Tag Step](./01.md) to be completed 
 
 1. Navigate to `.github/workflows` and open the file `02.2.continuous.delivery.yml`.
 2. Add the following content to the file:
-
-   ```yml
-name: Package Delivery Artifacts
-
-on:
-push:
-  tags:
-  - "*pre-release*"
-workflow_dispatch: {}
-
-permissions:
-contents: read
-packages: write
-pages: write
-
-env:
-CI: true
-SITE_DIR: site
-
-jobs:
-package-delivery:
-  runs-on: ubuntu-latest
-  steps:
-  - name: Checkout
-      uses: actions/checkout@v2
-  - name: Setup GitHub Pages
-      uses: actions/configure-pages@v3
-      with:
-      token: ${{ secrets.GITHUB_TOKEN }}
-      enablement: "true"
-  - name: Build Site
-      run: |
-          python -m mkdocs build --clean --strict --verbose --site-dir '${{ env.SITE_DIR }}'
-  - name: Create Pre-Release
-      uses: softprops/action-gh-release@v1
-      with:
-      files: ${{ env.SITE_DIR }}
-      prerelease: true
-      generate_release_notes: true
-      fail_on_unmatched_files: true
-      discussion_category_name: Announcements
-   ```
-
-3. Save the file and commit the changes to the branch `continuous-integration-deployment`.
-
-   ```bash
-    git add .
-    git commit -m "Build and upload application artifact"
-    git push origin continuous-integration-deployment
-   ```
-
-4. Navigate to the repository on GitHub.
+!!! example "Package Delivery Artifacts"
+      ``` yaml
+        name: Package Delivery Artifacts
+        on:
+          push:
+            tags:
+              - "*pre-release*"
+        permissions:
+          contents: read
+          packages: write
+          pages: write
+        env:
+          CI: true
+          SITE_DIR: _site
+        jobs:
+          package-delivery:
+            runs-on: ubuntu-latest
+            steps:
+            - name: Checkout
+              uses: actions/checkout@v2
+            - name: Setup GitHub Pages
+              uses: actions/configure-pages@v3
+              with:
+                token: ${{ secrets.GITHUB_TOKEN }}
+              enablement: "true"
+            - name: Build Site
+              run: |
+                python -m mkdocs build --clean --strict --verbose --site-dir '${{ env.SITE_DIR }}'
+            - name: Create Pre-Release
+              uses: softprops/action-gh-release@v1
+              with:
+                files: ${{ env.SITE_DIR }}
+                prerelease: true
+                generate_release_notes: true
+                fail_on_unmatched_files: true
+                discussion_category_name: Announcements
+      ```
+!!! example "Push changes to Github"
+       ``` bash
+       git add .
+       git commit -m "feat: update continuous integration workflow - add security checks step"
+       git push origin continuous-integration-deployment
+       ```
