--- a/docs/Labs-Instructions/03.Automate-Release/01.md
+++ b/docs/Labs-Instructions/03.Automate-Release/01.md
@@ -25,68 +25,54 @@ In this step once we clarify the application is ready to be deployed to pre-rela
 
 1. Navigate to `.github/workflows` and open the file `03.continuous.deployment.yml`.
 2. Add the following content to the file:
-
-    ```yml
-    name: Deploy Release
-    
-    on:
-    release:
-        types:
-        - released
-    workflow_dispatch: {}
-    
-    concurrency:
-    group: production-deployment
-    cancel-in-progress: false
-    
-    permissions:
-    packages: none
-    contents: write
-    issues: write
-    deployments: write
-    
-    env:
-    CI: true
-    
-    jobs:
-    deploy:
-        runs-on: ubuntu-latest
-        environment:
-        name: production
-        url: ${{ steps.deploy.outputs.site-url }}
-    
-        steps:
-        - name: Download release
+!!! example "Deploy Release"
+      ``` yaml
+      name: Deploy Release
+      on:
+        release:
+          types:
+          - released
+      concurrency:
+        group: production-deployment
+        cancel-in-progress: false
+      premissons:
+        packages: none
+        contents: write
+        issues: write
+        deployments: write
+      env:
+        CI: true
+      jobs:
+        deploy:
+          runs-on: ubuntu-latest
+          url: ${{ steps.deploy.outputs.site-url }}
+          steps:
+          - name: Download release
             run: |
-            curl -o assets.zip ${{ github.event.release.assets_url }}
-            # unarchive asset
-    
-        - name: Deploy
+              curl -o assets.zip ${{ github.event.release.assets_url }}
+              # unarchive asset
+          - name: Deploy
             run: |
-            # do git configs
-            git push origin HEAD:gh-pages
-    
-        - uses: actions/checkout@v3
-        - uses: actions/setup-node@v3
+              # do git configs
+              git push origin HEAD:gh-pages
+          - uses: actions/checkout@v3
+          - uses: actions/setup-node@v3
             with:
-            node-version: 20
-        - name: Install NodeJS dependencies
+              node-version: 20
+          - name: Install NodeJS dependencies
             run: npm ci
-        - name: Install Playwright Browsers
+          - name: Install Playwright Browsers
             run: npx playwright install --with-deps
-        - name: Run post-deployment UI test
+          - name: Run post-deployment UI test
             run: |
-            npx playwright test
-    ```
- 
-
-3. Save the file and commit the changes to the branch `continuous-integration-deployment`.
-    
-    ```bash
-    git add .
-    git commit -m "feat: add deployment workflow"
-    git push origin continuous-integration-deployment
-    ```
+              npx playwright test
+      ```
+!!! example "Push changes to Github"
+       ``` bash
+       git add .
+       git commit -m "feat: update continuous integration workflow - add security checks step"
+       git push origin continuous-integration-deployment
+       ```
 
 ---
 
