--- a/docs/Labs-Instructions/03.Automate-Release/01.md
+++ b/docs/Labs-Instructions/03.Automate-Release/01.md
@@ -80,10 +80,10 @@ In this step once we clarify the application is ready to be deployed to pre-rela
 
 In this module we have created:
 
-1. Enable Security Features and checks on [Step](../00.md).
-2. Create a new pre-release tag on [Step](../01.md).
-3. Build and Upload Application Artifact on [Step](../02.md).
-4. Container Image Packaging on [Step](../02-extra.md).
-5. Create a new release deployment on [Step](../03.md).
+1. Enable Security Features and checks on [Step](../02.Secure-Software-Supply-Chain/00.md).
+2. Create a new pre-release tag on [Step](../02.Secure-Software-Supply-Chain/01.md).
+3. Build and Upload Application Artifact on [Step](../02.Secure-Software-Supply-Chain/02.md).
+4. Container Image Packaging on [Step](../02.Secure-Software-Supply-Chain/02-extra.md).
+5. Create a new release deployment on [Step](../02.Secure-Software-Supply-Chain/03.md).
 
-Now let's move to our final step by merging the pull request to main branch on [Step](../04.md) and test all of the steps above.
+Now let's move to our final step by merging the pull request to main branch on [Step](02.md) and test all of the steps above.
