Complete reference workflow implementation

--- a/docs/Labs-Instructions/01.Collaborate/03.md
+++ b/docs/Labs-Instructions/01.Collaborate/03.md
@@ -98,13 +98,13 @@ The first step is to create a new integration check for the our app.
         SITE_DIR: site
         TETRIS_APP_HOST: "127.0.0.1"
         TETRIS_APP_PORT: "8080"
-        TETRIS_APP_PATH: "pages/githubuniverseworkshops/github-devsecops-fundamentals"
+        TETRIS_APP_PATH: "github-devsecops-fundamentals"
     ```
 
 3. Add the UI tests step on the workflow using the following code.
 
     ```yaml
-      ui-tests:
+      functional-tests:
           runs-on: ubuntu-latest
           steps:
             - uses: actions/checkout@v3
