Refactor and improve path names
Introduce naming consistency

--- a/docs/exercises/01.collaborate/02.md
+++ b/docs/exercises/01.collaborate/02.md
@@ -9,8 +9,8 @@
     3. On the `PORTS` view at the bottom, notice there is a `Site (8080)` entry in the table. You may right click on the entry to make the port public.
     4. Click the **:octicons-globe-16:** icon associated with `Site (8080)` entry to view the site in your browser
     5. Find and open the file `mkdocs.yml` in the File Explorer (it's at the root of the file tree)
-    6. Uncomment the Tetris Game relevant entry and point the value of the entry to the `.Tetris-Game` folder
+    6. Uncomment the Tetris Game relevant entry and point the value of the entry to the `..tetris.game` folder
 
-        ![Tetris Game integration](../../assets/imag/tetris-game-integration.png)
+        ![Tetris Game integration](../../assets/imag/.tetris.game-integration.png)
     7. Observe the local build in the terminal and do a manual test of the integration
     8. Add automated checks by duplicating `.github.reference/workflows/01.1.continuous.integration.yml` into `.github/workflows/01.1.continuous.integration.yml`
