--- a/docs/exercises/01.collaborate/01.md
+++ b/docs/exercises/01.collaborate/01.md
@@ -4,7 +4,7 @@
 
     > _Our goal is to create a **Tetris Game** to delight our site visitors._
 
-    1. Refer back to the project created in the [prerequisite to the workshop](../../../#prerequisites)
+    1. Refer back to the project created in the [prerequisite to the workshop](../../index.md#prerequisites)
     2. Create an issue to capture the goal
        1. Select the **:octicons-project-16: Home** view
        2. Click on the **+** button
