update @mouismail instrcutions

--- a/docs/exercises/02.secure.the.software.supply.chain/00.md
+++ b/docs/exercises/02.secure.the.software.supply.chain/00.md
@@ -50,28 +50,11 @@ In this part we will add to the continuous integration workflow the security che
 1. Navigate to `.github/workflows` and open the file `01.1.continuous.integration.yml`.
 2. Add the following content to the file on line `68`:
 !!! example "Security Checks"
-      ``` yaml
-        security-checks:
-        runs-on: ubuntu-latest
-        steps:
-        - uses: actions/checkout@v3
-        - uses: actions/setup-python@v4
-          with:
-            python-version: 3.12
-        - uses: actions/setup-node@v3
-          with:
-            node-version: 20
-        - name: Install Python dependencies
-          run: |
-            python -m pip install --upgrade pip
-            pip install -r requirements.txt
-        - name: Install node dependencies
-          run: npm ci
-        - name: Dependency Review
-          uses: actions/dependency-review-action@v3
-          with:
-            config-file: ./.github/dependency-review-config.yml
+
+      ```yaml
+      --8<-- "docs/exercises/02.secure.the.software.supply.chain/workflows/01.continuous-integration-part-1.yml"
       ```
+
 !!! example "Push changes to Github"
        ``` bash
        git add .
