--- a/docs/exercises/02.secure.the.software.supply.chain/02.md
+++ b/docs/exercises/02.secure.the.software.supply.chain/02.md
@@ -24,48 +24,42 @@ In this step we will build the application and upload the artifact to GitHub Pac
 !!! note
       This step requires the previous step [Create Tag Step](./01.md) to be completed first and the pre-realse tag is created and merging the pull request to main branch on step [Merge Pull Request Step](./04.md).
 
-1. Navigate to `.github/workflows` and open the file `02.2.continuous.delivery.yml`.
-2. Add the following content to the file:
-!!! example "Package Delivery Artifacts"
-      ``` yaml
-        name: Package Delivery Artifacts
-        on:
-          push:
-            tags:
-              - "*pre-release*"
-        permissions:
-          contents: read
-          packages: write
-          pages: write
-        env:
-          CI: true
-          SITE_DIR: _site
-        jobs:
-          package-delivery:
-            runs-on: ubuntu-latest
-            steps:
-            - name: Checkout
-              uses: actions/checkout@v4
-            - name: Setup GitHub Pages
-              uses: actions/configure-pages@v3
-              with:
-                token: ${{ secrets.GITHUB_TOKEN }}
-              enablement: "true"
-            - name: Build Site
-              run: |
-                python -m mkdocs build --clean --strict --verbose --site-dir '${{ env.SITE_DIR }}'
-            - name: Create Pre-Release
-              uses: softprops/action-gh-release@v1
-              with:
-                files: ${{ env.SITE_DIR }}
-                prerelease: true
-                generate_release_notes: true
-                fail_on_unmatched_files: true
-                discussion_category_name: Announcements
+- Navigate to `.github/workflows` and create a new file with name `02.2.continuous.delivery.yml`.
+- Add the following content to the file `02.2.continuous.delivery.yml`:
+
+#### Build and Archieve Artifact
+!!! example "Build and Archieve Artifact"
+
+    ```yaml
+    --8<-- "docs/exercises/02.secure.the.software.supply.chain/workflows/03.continuous.delivery-part-1.yml"
+    ```
+#### Draft The Release
+!!! example "Draft release"
+
+    ``` yaml
+    --8<-- "docs/exercises/02.secure.the.software.supply.chain/workflows/03.continuous.delivery-part-2.yml"
+    ```
+
+#### Upload and Publish The Release
+!!! example "Upload release and Publish it"
+
+      ```yaml
+      --8<-- "docs/exercises/02.secure.the.software.supply.chain/workflows/03.continuous.delivery-part-3.yml"
       ```
+
+- Commit and push the changes to GitHub
 !!! example "Push changes to Github"
        ``` bash
        git add .
-       git commit -m "feat: update continuous integration workflow - add security checks step"
+       git commit -m "feat: add continuous delivery workflow for building and publishing the application"
        git push origin continuous-integration-deployment
        ```
+---
+
+??? example "Full Example"
+
+      ```yaml
+      --8<-- "docs/exercises/02.secure.the.software.supply.chain/workflows/03.continuous.delivery.yml"
+      ```
+
+
