--- a/docs/exercises/03.automate.release/02.md
+++ b/docs/exercises/03.automate.release/02.md
@@ -17,11 +17,11 @@ flowchart TD
     B-->|Fail|C
 
     subgraph Release Process
-        E[Create Pre-Release Tag]
-        F[Create Pre-Release]
-        G{Validate}
-        H[Create Release]
-        I[Deployment]
+        E[Build and Upload Artifact]
+        F[Draft release]
+        G[Publish Release]
+        H{Validate}
+        I[Deploy Release]
         J[Failure Workflow]
 
     end
