--- a/docs/exercises/02.secure.the.software.supply.chain/01.md
+++ b/docs/exercises/02.secure.the.software.supply.chain/01.md
@@ -9,29 +9,6 @@ In this part we will get our application ready for deployment and deploy it to G
 !!! note
     This step will not be run until we merge the pull request first
 
-```{ .mermaid }
-
-sequenceDiagram
-    participant GA as GitHub Actions
-
-    activate GA
-    GA-->>GA: Create a tag
-    GA-->>GA: Update version number
-    deactivate GA
-
-```
-
-```{ .mermaid }
-
-sequenceDiagram
-    participant GA as GitHub Actions
-
-    activate GA
-    GA-->>GA: Build artifacts
-    GA-->>GA: Store artifacts
-    deactivate GA
-
-```
 
 ## Prerequisites
 
@@ -59,28 +36,11 @@ sequenceDiagram
 1. Navgiate to `.github/workflows` and create a new file called `02.1.continuous.delivery.yml`.
 2. Add the following content to the file:
 !!! example "Get Version Number"
-      ``` yaml
-        name: Version Changes to the Main Branch
-          on:
-            push:
-              branches:
-                - main
-          jobs:
-            ger-version-number:
-              runs-on: ubuntu-latest
-              steps:
-              - name: Checkout
-                uses: actions/checkout@v3
-                with:
-                  fetch-depth: 0
-              - name: Get last version number
-                id: get_last_version
-                run: |
-                  # Retrieve the last git tag, as we will only be processing one delivery line.
-                  last_version=$(git describe --tags --abbrev=0 2>/dev/null || echo "0.0.0")
-                  echo "Last version is $last_version"
-                  echo "last_version=$last_version" >> "$GITHUB_OUTPUT"
+
+      ```yaml
+      --8<-- "docs/exercises/02.secure.the.software.supply.chain/workflows/02.continuous-deployment-part-1.yml"
       ```
+
 !!! example "Push changes to Github"
        ``` bash
        git add .
@@ -93,25 +53,11 @@ sequenceDiagram
 1. Navgiate to `.github/workflows` and open `02.1.continuous.delivery.yml`.
 2. On line `24` add the following content:
 !!! example "Get Next Version Number"
-      ``` yaml
-        - name: Get next version number
-          id: get_next_version
-          run: |
-            # Retrieve the last git tag, as we will only be processing one delivery line.
-            last_version=$(git describe --tags --abbrev=0 2>/dev/null || echo "0.0.0")
-            echo "Last version is $last_version"
-            # Split the version into its components
-            a=( ${last_version//./ } )
-            # If the last component is 9, then increment the middle component and reset the last component to 0
-            if [[ ${a[2]} == 9 ]]; then
-                next_version="${a[0]}.$((${a[1]}+1)).0"
-            else
-                # Otherwise increment the last component
-                next_version="${a[0]}.${a[1]}.$((${a[2]}+1))"
-            fi
-            echo "Next version is $next_version"
-            echo "next_version=$next_version" >> "$GITHUB_OUTPUT"
+
+      ```yaml
+      --8<-- "docs/exercises/02.secure.the.software.supply.chain/workflows/02.continuous-deployment-part-2.yml"
       ```
+
 !!! example "Push changes to Github"
        ``` bash
        git add .
@@ -124,16 +70,11 @@ sequenceDiagram
 1. Navgiate to `.github/workflows` and open `02.1.continuous.delivery.yml`.
 2. Add the following content to the file after line `38`:
 !!! example "Create pre-release tag"
-      ``` yaml
-      - name: Create tag for the next version
-        run: |
-          git config --global user.name "${GITHUB_ACTOR}"
-          git config --global user.email "${GITHUB_ACTOR}@users.noreply.github.com"
-          git tag -a "$next_version" -m "Version $next_version"
-          git push origin "$next_version"
-        env:
-          next_version: ${{ steps.get_next_version.outputs.next_version }}-pre-release
+
+      ```yaml
+      --8<-- "docs/exercises/02.secure.the.software.supply.chain/workflows/02.continuous-deployment-part-3.yml"
       ```
+
 !!! example "Push changes to Github"
        ``` bash
        git add .
@@ -145,45 +86,7 @@ sequenceDiagram
 
 ### Complete Example
 ??? example "Full Workflow File"
-      ``` yaml
-      name: Version Changes to the Main Branch
-      on:
-        push:
-          branches:
-            - main
-      jobs:
-        version-main-branch-changes:
-          runs-on: ubuntu-latest
-          steps:
-          - name: Checkout
-            uses: actions/checkout@v3
-            with:
-              fetch-depth: 0
-          - name: Get last version number
-            id: get_last_version
-            run: |
-              # Retrieve the last git tag, as we will only be processing one delivery line.
-              last_version=$(git describe --tags --abbrev=0 2>/dev/null || echo "0.0.0")
-              echo "Last version is $last_version"
-              echo "last_version=$last_version" >> "$GITHUB_OUTPUT"
-          - name: Get next version number
-            id: get_next_version
-            run: |
-              major=$(echo $last_version | cut -d. -f1)
-              minor=$(echo $last_version | cut -d. -f2)
-              patch=$(echo $last_version | cut -d. -f3)
-              next_patch=$((patch+1))
-              next_version="$major.$minor.$next_patch"
-              echo "Next version is $next_version"
-              echo "next_version=$next_version" >> "$GITHUB_OUTPUT"
-            env:
-              last_version: ${{ steps.get_last_version.outputs.last_version }}
-          - name: Create tag for the next version
-            run: |
-              git config --global user.name "${GITHUB_ACTOR}"
-              git config --global user.email "${GITHUB_ACTOR}@users.noreply.github.com"
-              git tag -a "$next_version" -m "Version $next_version"
-              git push origin "$next_version"
-            env:
-              next_version: ${{ steps.get_next_version.outputs.next_version }}-pre-release
+
+      ```yaml
+      --8<-- "docs/exercises/02.secure.the.software.supply.chain/workflows/02.continuous-deployment.yml"
       ```
