--- a/docs/exercises/03.automate.release/01.md
+++ b/docs/exercises/03.automate.release/01.md
@@ -26,47 +26,11 @@ In this step once we clarify the application is ready to be deployed to pre-rela
 1. Navigate to `.github/workflows` and open the file `03.continuous.deployment.yml`.
 2. Add the following content to the file:
 !!! example "Deploy Release"
-      ``` yaml
-      name: Deploy Release
-      on:
-        release:
-          types:
-          - released
-      concurrency:
-        group: production-deployment
-        cancel-in-progress: false
-      premissons:
-        packages: none
-        contents: write
-        issues: write
-        deployments: write
-      env:
-        CI: true
-      jobs:
-        deploy:
-          runs-on: ubuntu-latest
-          url: ${{ steps.deploy.outputs.site-url }}
-          steps:
-          - name: Download release
-            run: |
-              curl -o assets.zip ${{ github.event.release.assets_url }}
-              # unarchive asset
-          - name: Deploy
-            run: |
-              # do git configs
-              git push origin HEAD:gh-pages
-          - uses: actions/checkout@v3
-          - uses: actions/setup-node@v3
-            with:
-              node-version: 20
-          - name: Install NodeJS dependencies
-            run: npm ci
-          - name: Install Playwright Browsers
-            run: npx playwright install --with-deps
-          - name: Run post-deployment UI test
-            run: |
-              npx playwright test
+
+      ```yaml
+      --8<-- "docs/exercises/03.automate.release/workflows/01.continuous-deployment.yml"
       ```
+
 !!! example "Push changes to Github"
        ``` bash
        git add .
