--- a/docs/exercises/02.secure.the.software.supply.chain/00.md
+++ b/docs/exercises/02.secure.the.software.supply.chain/00.md
@@ -21,29 +21,8 @@ In this part we will add to the continuous integration workflow the security che
 !!! note
     You must have admin permissions on the repository to perform this step.
 
-1. Navigate to the repository settings.
-2. Select the tab `Security & analysis`.
-
-      ![GHAS](../../assets/img/compliance-1.png)
-
-3. Enable `Dependabot`
-
-   - Click on the button <span style="background-color: green; font-weight: bold; padding: 0.25em 0.75em; border-radius: 0.5em">Enable</span> `Dependabot alerts`.
-   - Click on the button <span style="background-color: green; font-weight: bold; padding: 0.25em 0.75em; border-radius: 0.5em">Enable</span> `Dependabot security updates`.
-
-       ![GHAS](../../assets/img/compliance-2.png)
-
-4. Enable `Code scanning`.
-
-   - Click on the button <span style="background-color: green; font-weight: bold; padding: 0.25em 0.75em; border-radius: 0.5em">Set up</span> for `CodeQL analysis` and select <span style="background-color: green; font-weight: bold; padding: 0.25em 0.75em; border-radius: 0.5em">Default</span>.
-
-      ![GHAS](../../assets/img/complianc-3_.png)
-
-5. Enable `Secret scanning`.
-
-   - Click on the button <span style="background-color: green; font-weight: bold; padding: 0.25em 0.75em; border-radius: 0.5em">Enable</span> for `Secret scanning`.
-
-     ![GHAS](../../assets/img/complaince-4.png)
+!!! note
+    This part is suppose to be done in the prerequisites
 
 ### Step 2. Add security checks to the continuous integration workflow
 
