--- a/docs/exercises/02.secure.the.software.supply.chain/01.md
+++ b/docs/exercises/02.secure.the.software.supply.chain/01.md
@@ -44,7 +44,7 @@ In this part we will get our application ready for deployment and deploy it to G
 !!! example "Push changes to Github"
        ``` bash
        git add .
-       git commit -m "feat: update continuous integration workflow - add security checks step"
+       git commit -m "feat: update continuous integration workflow - add continuous-deployment part 1"
        git push origin continuous-integration-deployment
        ```
 
@@ -61,7 +61,7 @@ In this part we will get our application ready for deployment and deploy it to G
 !!! example "Push changes to Github"
        ``` bash
        git add .
-       git commit -m "feat: update continuous integration workflow - add security checks step"
+       git commit -m "feat: update continuous integration workflow - add continuous-deployment part 2"
        git push origin continuous-integration-deployment
        ```
 
@@ -78,7 +78,7 @@ In this part we will get our application ready for deployment and deploy it to G
 !!! example "Push changes to Github"
        ``` bash
        git add .
-       git commit -m "feat: update continuous integration workflow - add security checks step"
+       git commit -m "feat: update continuous integration workflow - add continuous-deployment part 3"
        git push origin continuous-integration-deployment
        ```
 
